--- a/memory_game/src/Easys.css
+++ b/memory_game/src/Easys.css
@@ -21,3 +21,13 @@
     justify-content: center;
     align-items: center;
 }
+.mid {
+    display: flex;
+    justify-content: center;
+}
+.restart { 
+    border: solid;
+    width: 100px;
+    background-color: white;
+    cursor: pointer;
+}
